examples/interdomain/nsm_istio_vl3/clean/istio-namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: istio-system
  annotations:
    networkservicemesh.io: kernel://my-vl3-network/nsm-1?dnsName=istio-cp
