examples/interdomain/nsm_istio_vl3/clean/ubuntu-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
  labels:
    app: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu-2
  template:
    metadata:
      labels:
        app: ubuntu-2
      annotations:
        networkservicemesh.io: kernel://my-vl3-network@my.cluster1/nsm-1?dnsName=ubuntu-2
    spec:
      containers:
        - name: ubuntu
          image: ubuntu
          command: ["sleep", "123456"]
          securityContext:
            privileged: true
