examples/interdomain/nsm_istio_vl3/clean/mtls-dest-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: my-vl3-network
  namespace: istio-system
spec:
  host: '*.my-vl3-network'
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
