examples/interdomain/nsm_istio_vl3/clean/mtls-service-entry-hw1.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: se-hw1
  namespace: istio-system
spec:
  hosts:
  - helloworld.my-vl3-network
  # addresses:
  # - 172.16.0.3/24 # VIPs
  ports:
  - number: 5000
    name: hw
    protocol: HTTP
  # location: MESH_INTERNAL
  # resolution: STATIC
  # endpoints:
  # - address: 172.16.0.3
